new swagger conf
