# src/api/handlers/test_handler.go
@@ -131,6 +131,17 @@ func (h *TestHandler) UriBinder(c *gin.Context) {
 	}, true, 0))
 }
 
+
+// BodyBinder godoc
+// @Summary BodyBinder
+// @Description BodyBinder
+// @Tags Test
+// @Accept json
+// @Produce json
+// @Param person body personData true "person data"
+// @Success 200 {object} helper.BaseHttpResponse "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Failed"
+// @Router /v1/test/binder/body [post]
 func (h *TestHandler) BodyBinder(c *gin.Context) {
 	p := personData{}
 	err := c.ShouldBindJSON(&p)
