# src/docs/swagger.yaml
@@ -1,5 +1,24 @@
 definitions:
-  helper.BaseHttpResponse:
+  api_handlers.personData:
+    properties:
+      first_name:
+        maxLength: 10
+        minLength: 4
+        type: string
+      last_name:
+        maxLength: 20
+        minLength: 6
+        type: string
+      mobile_number:
+        maxLength: 11
+        minLength: 11
+        type: string
+    required:
+    - first_name
+    - last_name
+    - mobile_number
+    type: object
+  github_com_paghapour_golang-clean-web-api_api_helper.BaseHttpResponse:
     properties:
       error: {}
       result: {}
@@ -9,10 +28,10 @@ definitions:
         type: boolean
       validationErrors:
         items:
-          $ref: '#/definitions/validation.ValidationError'
+          $ref: '#/definitions/github_com_paghapour_golang-clean-web-api_api_validations.ValidationError'
         type: array
     type: object
-  validation.ValidationError:
+  github_com_paghapour_golang-clean-web-api_api_validations.ValidationError:
     properties:
       message:
         type: string
@@ -26,6 +45,51 @@ definitions:
 info:
   contact: {}
 paths:
+  /v1/health/:
+    get:
+      consumes:
+      - application/json
+      description: Health Check
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/github_com_paghapour_golang-clean-web-api_api_helper.BaseHttpResponse'
+        "400":
+          description: Failed
+          schema:
+            $ref: '#/definitions/github_com_paghapour_golang-clean-web-api_api_helper.BaseHttpResponse'
+      summary: Health Check
+      tags:
+      - Health
+  /v1/test/binder/body:
+    post:
+      consumes:
+      - application/json
+      description: BodyBinder
+      parameters:
+      - description: person data
+        in: body
+        name: person
+        required: true
+        schema:
+          $ref: '#/definitions/api_handlers.personData'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/github_com_paghapour_golang-clean-web-api_api_helper.BaseHttpResponse'
+        "400":
+          description: Failed
+          schema:
+            $ref: '#/definitions/github_com_paghapour_golang-clean-web-api_api_helper.BaseHttpResponse'
+      summary: BodyBinder
+      tags:
+      - Test
   /v1/test/user/{id}:
     get:
       consumes:
@@ -43,12 +107,17 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/github_com_paghapour_golang-clean-web-api_api_helper.BaseHttpResponse'
         "400":
           description: Failed
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/github_com_paghapour_golang-clean-web-api_api_helper.BaseHttpResponse'
       summary: UserById
       tags:
       - Test
+securityDefinitions:
+  AuthBearer:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
